# cdbgen-rs

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: build.yml  release.yml
src/: cache.rs  cdb_writer.rs  cli.rs  config.rs  error.rs  fetcher.rs  lib.rs  logging.rs  main.rs  normalize.rs  outputs.rs  parser.rs
tests/: cli.rs
