[package]
name = "cdbgen-rs"
version = "0.1.2"
edition = "2024"
description = "Generate DJB-compatible CDB files from remote blocklists"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cdb = "0.6.0"
clap = { version = "4.5.53", features = ["derive"] }
idna = "1.1.0"
reqwest = { version = "0.13.3", default-features = false, features = ["brotli", "deflate", "gzip", "rustls", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.1.1"
brotli = "8.0.2"
flate2 = "1.1.5"
predicates = "3.1.3"
tempfile = "3.23.0"
wiremock = "0.6.5"
zstd = "0.13.3"
